--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h2>Main Navigation</h2>
         <ul>
             <li><a href="#">What We're All About</a></li>
-            <li><a href="community">Join Our Cookie Community</a></li>
-            <li><a href="favorite">Fan-Favorite Sections</a></li>
-            <li><a href="join">Join Us Today</a></li>
+            <li><a href="#">Join Our Cookie Community</a></li>
+            <li><a href="#">Fan-Favorite Sections</a></li>
+            <li><a href="#">Join Us Today</a></li>
         </ul>
     </nav>
 
